<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Cue</string>
    <string name="app_name_full" translatable="false">Cue</string>
    <string name="org_name_full" translatable="false">Based on Aegis Authenticator by Beem Development</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_transfer">Transfer</string>
    <string name="action_edit_icon">Edit icon</string>
    <string name="action_reset_usage_count">Reset usage count</string>
    <string name="action_reset_usage_count_dialog">Are you sure you want to set the usage count of this entry to 0?</string>
    <string name="action_default_icon">Restore default icon</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="all">All</string>
    <string name="issuer">Issuer</string>
    <string name="yandex_pin">PIN (4–16 digits)</string>
    <string name="motp_pin">PIN (4 digits)</string>
    <string name="suggested">Suggested</string>
    <string name="usage_count">Usage count</string>
    <string name="warning">Warning</string>
    <string name="pref_cat_appearance_app">App</string>
    <string name="pref_cat_appearance_entries">Entries</string>
    <string name="pref_cat_backups_android">Android</string>
    <string name="pref_cat_backups_auto">Automatic backups</string>
    <string name="pref_section_behavior_title">Behavior</string>
    <string name="pref_section_behavior_summary">Customize the behavior when interacting with the entry list.</string>
    <string name="pref_section_appearance_title">Appearance</string>
    <string name="pref_section_appearance_summary">Adjust the theme, language and other settings that affect the appearance of the app.</string>
    <string name="pref_section_security_title">Security</string>
    <string name="pref_section_security_summary">Configure encryption, biometric unlock, auto lock and other security settings.</string>
    <string name="pref_section_import_export_title">Import &amp; Export</string>
    <string name="pref_section_import_export_summary">Import backups of Aegis, Cue or other authenticator apps. Create manual exports of your Cue vault.</string>
    <string name="pref_section_audit_log_title">Audit log</string>
    <string name="pref_section_audit_log_summary">Find a list of all reported important events that happened within the app.</string>
    <string name="pref_section_backups_title">Backups</string>
    <string name="pref_section_backups_summary">Set up automatic backups to a location of your choosing or enable participation in Android\'s cloud backup system.</string>
    <string name="pref_section_icon_packs">Icon packs</string>
    <string name="pref_section_icon_packs_summary">Manage and import icon packs</string>
    <string name="pref_select_theme_title">Theme</string>
    <string name="pref_dynamic_colors_title">Dynamic colors</string>
    <string name="pref_dynamic_colors_summary">Apply an overlay based on the colors of your Android theme</string>
    <string name="pref_view_mode_title">View mode</string>
    <string name="pref_lang_title">Language</string>
    <string name="pref_show_icons_title">Show icons</string>
    <string name="pref_show_icons_summary">Display icons next to each entry</string>
    <string name="pref_code_group_size_title">Code digit grouping</string>
    <string name="pref_code_group_size_summary">Select number of digits to group codes by</string>
    <string name="pref_account_name_position_title">Show the account name</string>
    <string name="pref_show_next_code_title">Show next code</string>
    <string name="pref_show_next_code_summary">Generate and show the next code ahead of time</string>
    <string name="pref_expiration_state_title">Indicate when codes are about to expire</string>
    <string name="pref_expiration_state_summary">Change the color of the codes and have them blink when they are about to expire</string>
    <string name="pref_expiration_state_fallback">Change the color of the codes when they are about to expire</string>
    <string name="pref_shared_issuer_account_name_title">Only show account name when necessary</string>
    <string name="pref_shared_issuer_account_name_summary">Only show account names whenever they share the same issuer. Other account names will be hidden.</string>
    <string name="pref_account_name_position_summary_override">This setting is overridden by the tiles view mode. Account name will be shown below the issuer.</string>
    <string name="pref_import_file_title">Import from file</string>
    <string name="pref_import_file_summary">Import tokens from a file</string>
    <string name="pref_android_backups_title">Android cloud backups</string>
    <string name="pref_android_backups_summary">Allow Android\'s cloud backup system to include Cue\'s vault in its backups. This is only supported for encrypted vaults.</string>
    <string name="pref_android_backups_hint"><i>Device-to-device (D2D) backups are always allowed, regardless of the setting above</i></string>
    <string name="pref_backups_title">Automatically back up the vault</string>
    <string name="pref_backups_summary">Automatically create backups of the vault on external storage when changes are made. This is only supported for encrypted vaults.</string>
    <string name="pref_backups_reminder_title">Backup reminder</string>
    <string name="pref_backups_reminder_summary">Show a reminder to backup your vault in case you haven\'t backed up your latest changes.</string>
    <string name="pref_backups_reminder_dialog_title">Disable backup reminder</string>
    <string name="pref_backups_reminder_dialog_summary">Disabling this reminder means Cue won\'t tell you whether or not you have changes that are not backed up yet. This puts you at risk of losing access to your tokens. Are you sure you want to disable the reminder?</string>
    <string name="pref_backups_versioning_strategy_title">Backup strategy</string>
    <string name="pref_backups_versioning_strategy_keep_x_versions">Keep a number of versions</string>
    <string name="pref_backups_versioning_strategy_single_backup">Single backup</string>
    <string name="pref_backups_versioning_strategy_single_backup_warning">The selected backup strategy is not reliable and not recommended. A single backup failure could lead to losing your only backup.</string>
    <string name="pref_backups_versioning_strategy_dialog_title">Select a backup strategy</string>
    <string name="pref_backups_location_title">Backup location</string>
    <string name="pref_backups_location_summary">Backups will be stored at</string>
    <string name="pref_backup_location_summary">Backup will be stored at</string>
    <string name="pref_backups_trigger_title">Trigger backup</string>
    <string name="pref_backups_trigger_summary">Manually trigger a backup</string>
    <string name="pref_backups_versions_title">Number of versions to keep</string>
    <string name="pref_backups_versions_infinite">\u221E</string>
    <plurals name="pref_backups_versions_summary">
        <item quantity="one">Keep %1$d version of the backup</item>
        <item quantity="other">Keep %1$d versions of the backup</item>
    </plurals>
    <string name="pref_backups_versions_infinite_summary">Keep an infinite number of versions of the backup</string>
    <string name="pref_import_app_title">Import from app</string>
    <string name="pref_import_app_summary">Import tokens from an app (requires root access)</string>
    <string name="pref_export_title">Export</string>
    <string name="pref_export_summary">Export the vault</string>
    <string name="pref_password_reminder_title">Password reminder</string>
    <string name="pref_google_auth_export_title">Export for Google Authenticator</string>
    <string name="pref_google_auth_export_descriptor">Generates export QR codes compatible with Google Authenticator</string>
    <string name="pref_google_auth_export_no_data">No data to export</string>
    <plurals name="pref_google_auth_export_incompatible_entries">
        <item quantity="one">Skipped %d incompatible entry</item>
        <item quantity="other">Skipped %d incompatible entries</item>
    </plurals>
    <string name="pref_password_reminder_summary">Show a %s reminder to enter the password, so that you don\'t forget it.</string>
    <string name="pref_password_reminder_summary_disabled">Disabled</string>
    <string name="choose_authentication_method">Security</string>
    <string name="authentication_method_explanation">Cue is a security-focused 2FA app. Tokens are stored in a vault, that can optionally be encrypted with a password of your choosing. If an attacker obtains your encrypted vault file, they will not be able to access the contents without knowing the password.\n\nWe\'ve preselected the option that we think would fit best for your device.</string>
    <string name="authentication_method_none">None</string>
    <string name="authentication_method_none_description">No password is needed to unlock the vault and it will not be encrypted. <b>This option is not recommended</b>.</string>
    <string name="authentication_method_password">Password</string>
    <string name="authentication_method_password_description">A password is needed to unlock the vault.</string>
    <string name="authentication_method_biometrics">Biometrics</string>
    <string name="authentication_method_biometrics_description">In addition to a password, biometrics registered on this device, like a fingerprint or your face, can be used to unlock the vault.</string>
    <string name="authentication_multiline" comment="The newline in the middle is used for aesthetic purposes">Unlock\nthe vault</string>
    <string name="auth_use_biometrics">Or tap here to use <font fgcolor='#FF0D86C1'>biometrics</font></string>
    <string name="invalidated_biometrics">A change in your device\'s security settings has been detected. Please go to \"Cue -> Settings -> Security -> Biometric unlock\" to disable and re-enable biometric unlock.</string>
    <string name="unlock">Unlock</string>
    <string name="password">Password</string>
    <string name="ime_open_app">Open Cue</string>
    <string name="ime_switch_keyboard">Switch keyboard</string>
    <string name="widget_configure_favorites_title">Show favorites</string>
    <string name="widget_configure_favorites_summary">The widget follows your favorites automatically</string>
    <string name="widget_configure_select_hint">Select the entries to show in the widget</string>
    <string name="pref_section_integrations_title">Keyboard &amp; widget</string>
    <string name="pref_cat_ime">Keyboard</string>
    <string name="pref_cat_widget">Widget</string>
    <string name="pref_ime_enable_title">Enable Cue keyboard</string>
    <string name="pref_ime_switch_back_title">Switch back after inserting</string>
    <string name="pref_ime_switch_back_summary">Return to the previous keyboard once a code has been inserted</string>
    <string name="pref_ime_suggest_by_app_title">Suggest entries for the current app</string>
    <string name="pref_ime_suggest_by_app_summary">Show entries that match the name of the app you\'re typing in first. Doesn\'t work in browsers.</string>
    <string name="pref_ime_insert_as_text_title">Insert codes as text</string>
    <string name="pref_ime_insert_as_text_summary">Insert the whole code at once instead of typing it digit by digit. Try this if codes don\'t show up in some apps.</string>
    <string name="pref_widget_add_title">Add widget to home screen</string>
    <string name="pref_widget_add_summary">Shows the codes of your favorites or selected entries, hidden until you tap them.</string>
    <string name="pref_external_grace_title">Keep unlocked for keyboard and widget</string>
</resources>